Large merge