@@ -65,23 +65,29 @@ import static io.deephaven.extensions.barrage.util.GrpcUtil.safelyError;
 /**
  * SessionState manages all exports for a single session.
  *
+ * <p>
  * It manages exported {@link LivenessReferent}. It cascades failures to child dependencies.
  *
+ * <p>
  * TODO: - cyclical dependency detection - out-of-order dependency timeout
  *
+ * <p>
  * Details Regarding Data Structure of ExportObjects:
  *
- * The exportMap map, exportListeners list, exportListenerVersion, and export object's exportListenerVersion work
+ * <ul>
+ * <li>The exportMap map, exportListeners list, exportListenerVersion, and export object's exportListenerVersion work
  * together to enable a listener to synchronize with outstanding exports in addition to sending the listener updates
- * while they continue to subscribe.
+ * while they continue to subscribe.</li>
  *
- * - SessionState::exportMap's purpose is to map from the export id to the export object -
- * SessionState::exportListeners' purpose is to keep a list of active subscribers -
- * SessionState::exportListenerVersion's purpose is to know whether or not a subscriber has already seen a status
+ * <li>SessionState::exportMap's purpose is to map from the export id to the export object</li>
+ * <li>SessionState::exportListeners' purpose is to keep a list of active subscribers</li>
+ * <li>SessionState::exportListenerVersion's purpose is to know whether or not a subscriber has already seen a
+ * status</li>
  *
- * A listener will receive an export notification for export id NON_EXPORT_ID (a zero) to indicate that the run has
+ * <li>A listener will receive an export notification for export id NON_EXPORT_ID (a zero) to indicate that the run has
  * completed. A listener may see an update for an export before receiving the "run has completed" message. A listener
- * should be prepared to receive duplicate/redundant updates.
+ * should be prepared to receive duplicate/redundant updates.</li>
+ * </ul>
  */
 public class SessionState {
     // Some work items will be dependent on other exports, but do not export anything themselves.
@@ -121,6 +127,7 @@ public class SessionState {
 
     private final String logPrefix;
     private final Scheduler scheduler;
+    private final SessionService.ErrorTransformer errorTransformer;
     private final AuthContext authContext;
 
     private final String sessionId;
@@ -149,12 +156,15 @@ public class SessionState {
     private final ExecutionContext executionContext;
 
     @AssistedInject
-    public SessionState(final Scheduler scheduler,
+    public SessionState(
+            final Scheduler scheduler,
+            final SessionService.ErrorTransformer errorTransformer,
             final Provider<ExecutionContext> executionContextProvider,
             @Assisted final AuthContext authContext) {
         this.sessionId = UuidCreator.toString(UuidCreator.getRandomBased());
         this.logPrefix = "SessionState{" + sessionId + "}: ";
         this.scheduler = scheduler;
+        this.errorTransformer = errorTransformer;
         this.authContext = authContext;
         this.executionContext = executionContextProvider.get().withAuthContext(authContext);
         log.debug().append(logPrefix).append("session initialized").endl();
@@ -501,10 +511,10 @@ public class SessionState {
     /**
      * This class represents one unit of content exported in the session.
      *
-     *
+     * <p>
      * Note: we reuse ExportObject for non-exporting tasks that have export dependencies.
      *
-     * @param <T> Is context sensitive depending on the export.
+     * @param <T> Is context-sensitive depending on the export.
      *
      * @apiNote ExportId may be 0, if this is a task that has exported dependencies, but does not export anything
      *          itself. Non-exports do not publish state changes.
@@ -512,6 +522,7 @@ public class SessionState {
     public final static class ExportObject<T> extends LivenessArtifact {
         private final int exportId;
         private final String logIdentity;
+        private final SessionService.ErrorTransformer errorTransformer;
         private final SessionState session;
 
         /** final result of export */
@@ -548,10 +559,15 @@ public class SessionState {
         private Exception caughtException;
 
         /**
+         * @param errorTransformer the error transformer to use
          * @param exportId the export id for this export
          */
-        private ExportObject(final SessionState session, final int exportId) {
+        private ExportObject(
+                final SessionService.ErrorTransformer errorTransformer,
+                final SessionState session,
+                final int exportId) {
             super(true);
+            this.errorTransformer = errorTransformer;
             this.session = session;
             this.exportId = exportId;
             this.logIdentity =
@@ -570,6 +586,7 @@ public class SessionState {
          */
         private ExportObject(final T result) {
             super(true);
+            this.errorTransformer = null;
             this.session = null;
             this.exportId = NON_EXPORT_ID;
             this.result = result;
@@ -691,15 +708,14 @@ public class SessionState {
             if (session != null && session.isExpired()) {
                 throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
             }
-
+            final T localResult = result;
             // Note: an export may be released while still being a dependency of queued work; so let's make sure we're
             // still valid
-            if (result == null) {
+            if (localResult == null) {
                 throw new IllegalStateException(
                         "Dependent export '" + exportId + "' is null and in state " + state.name());
             }
-
-            return result;
+            return localResult;
         }
 
         /**
@@ -772,7 +788,14 @@ public class SessionState {
                     assignErrorId();
                 }
                 try {
-                    errorHandler.onError(state, errorId, caughtException, dependentHandle);
+                    final Exception toReport;
+                    if (caughtException != null && errorTransformer != null) {
+                        toReport = errorTransformer.transform(caughtException);
+                    } else {
+                        toReport = caughtException;
+                    }
+
+                    errorHandler.onError(state, errorId, toReport, dependentHandle);
                 } catch (final Exception err) {
                     log.error().append("Unexpected error while reporting state failure: ").append(err).endl();
                 }
@@ -1216,7 +1239,7 @@ public class SessionState {
             this.exportId = exportId;
 
             if (exportId == NON_EXPORT_ID) {
-                this.export = new ExportObject<>(SessionState.this, NON_EXPORT_ID);
+                this.export = new ExportObject<>(SessionState.this.errorTransformer, SessionState.this, NON_EXPORT_ID);
             } else {
                 // noinspection unchecked
                 this.export = (ExportObject<T>) exportMap.putIfAbsent(exportId, EXPORT_OBJECT_VALUE_FACTORY);
@@ -1242,7 +1265,7 @@ public class SessionState {
          * @return this builder
          */
         public ExportBuilder<T> require(final ExportObject<?>... dependencies) {
-            export.setDependencies(Arrays.asList(dependencies));
+            export.setDependencies(List.of(dependencies));
             return this;
         }
 
@@ -1253,8 +1276,8 @@ public class SessionState {
          * @param dependencies the parent dependencies
          * @return this builder
          */
-        public <S> ExportBuilder<T> require(final List<ExportObject<S>> dependencies) {
-            export.setDependencies(Collections.unmodifiableList(dependencies));
+        public ExportBuilder<T> require(final List<? extends ExportObject<?>> dependencies) {
+            export.setDependencies(List.copyOf(dependencies));
             return this;
         }
 
@@ -1296,8 +1319,13 @@ public class SessionState {
                 final String dependentStr = dependentExportId == null ? ""
                         : (" (related parent export id: " + dependentExportId + ")");
                 if (cause == null) {
-                    errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
-                            "Export in state " + resultState + dependentStr));
+                    if (resultState == ExportNotification.State.CANCELLED) {
+                        errorHandler.onError(Exceptions.statusRuntimeException(Code.CANCELLED,
+                                "Export is cancelled" + dependentStr));
+                    } else {
+                        errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
+                                "Export in state " + resultState + dependentStr));
+                    }
                 } else {
                     errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
                             "Details Logged w/ID '" + errorContext + "'" + dependentStr));
@@ -1327,6 +1355,7 @@ public class SessionState {
          * the scheduler when all dependencies have been satisfied. Only the dependencies supplied to the builder are
          * guaranteed to be resolved when the exportMain is executing.
          *
+         * <p>
          * Warning! It is the SessionState owner's responsibility to wait to release any dependency until after this
          * exportMain callable/runnable has complete.
          *
@@ -1343,6 +1372,7 @@ public class SessionState {
          * the scheduler when all dependencies have been satisfied. Only the dependencies supplied to the builder are
          * guaranteed to be resolved when the exportMain is executing.
          *
+         * <p>
          * Warning! It is the SessionState owner's responsibility to wait to release any dependency until after this
          * exportMain callable/runnable has complete.
          *
@@ -1387,7 +1417,7 @@ public class SessionState {
                         throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
                     }
 
-                    return new ExportObject<>(SessionState.this, key);
+                    return new ExportObject<>(SessionState.this.errorTransformer, SessionState.this, key);
                 }
             };
 }
